using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerController : MonoBehaviour
{
    public float moveSpeed;
    private float currentMoveSpeed;

    private Animator anim;
    private Rigidbody2D myRigidbody;

    private bool playerMoving;
    public Vector2 lastMove;
    public float ClampMoveX;
    private Vector2 moveInput;

    private static bool playerExists;

    private bool attacking;

    public string startPoint;

    private SFXManager sfxMan;


    void Start()
    {
        anim = GetComponent<Animator>();
        myRigidbody = GetComponent<Rigidbody2D>();
        sfxMan = FindObjectOfType<SFXManager>();
        if(!playerExists)
        {
            playerExists = true;
            DontDestroyOnLoad(transform.gameObject);
        }
        else
        {
            Destroy(gameObject);
        }
        lastMove = new Vector2(0, -1f);
    }

    void Update()
    {
        attacking = false;
         playerMoving = false;
          if (!attacking)
          {
              moveInput = new Vector2(Input.GetAxisRaw("Horizontal"), Input.GetAxisRaw("Vertical")).normalized;
              if (Input.GetAxisRaw("Horizontal") != 0)
              {
                  anim.SetFloat("ClampMoveX", Input.GetAxisRaw("Horizontal"));
              }
              if(moveInput != Vector2.zero)
              {
                  myRigidbody.velocity = new Vector2(moveInput.x * moveSpeed, moveInput.y * moveSpeed);
                  playerMoving = true;
                  lastMove = moveInput;
              }
              else
              {
                  myRigidbody.velocity = Vector2.zero;
              }
          }   
            anim.SetFloat("MoveX", Input.GetAxisRaw("Horizontal"));
            anim.SetFloat("MoveY", Input.GetAxisRaw("Vertical"));
            anim.SetBool("PlayerMoving", playerMoving);
            anim.SetFloat("LastMoveX", lastMove.x);
            anim.SetFloat("LastMoveY", lastMove.y);
    }
}
